Scrollbar fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -29,26 +29,95 @@ h1.ttile {
 .header-back {
     background-image: linear-gradient( 45deg, #2979ff, #2979ff 50%, #ffffff 50%, #ffffff 85%, #212121 85%);
     /* background: linear-gradient(to bottom right, #7c4dff, #7c4dff 30%, #7c4dff 30%, #FFFFFF 30%, #ffffff 33%); */
+    height: 640px;
 }
 
-.scrollbar-track-y {
-    top: 0;
-    right: 0;
-    width: 2px;
-    height: 100%
+[data-scrollbar],
+[scrollbar],
+scrollbar {
+    display: block;
+    position: relative
 }
 
-.scrollbar-track-x {
+[data-scrollbar] .scroll-content,
+[scrollbar] .scroll-content,
+scrollbar .scroll-content {
+    width: 100%;
+    height: 100%;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0)
+}
+
+[data-scrollbar].sticky .scrollbar-track,
+[scrollbar].sticky .scrollbar-track,
+scrollbar.sticky .scrollbar-track {
+    background: hsla(0, 0%, 87%, 0)
+}
+
+[data-scrollbar] .scrollbar-track,
+[scrollbar] .scrollbar-track,
+scrollbar .scrollbar-track {
+    position: absolute;
+    opacity: 0;
+    z-index: 1;
+    transition: opacity .5s ease-out, background .5s ease-out;
+    background: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+[data-scrollbar] .scrollbar-track.show,
+[data-scrollbar] .scrollbar-track:hover,
+[scrollbar] .scrollbar-track.show,
+[scrollbar] .scrollbar-track:hover,
+scrollbar .scrollbar-track.show,
+scrollbar .scrollbar-track:hover {
+    opacity: 1
+}
+
+[data-scrollbar] .scrollbar-track:hover,
+[scrollbar] .scrollbar-track:hover,
+scrollbar .scrollbar-track:hover {
+    background: hsla(0, 0%, 87%, 0)
+}
+
+[data-scrollbar] .scrollbar-track-x,
+[scrollbar] .scrollbar-track-x,
+scrollbar .scrollbar-track-x {
     bottom: 0;
     left: 0;
     width: 100%;
     height: 0
 }
 
-.scrollbar-track:hover {
-    background: hsla(0, 0%, 87%, 0)
+[data-scrollbar] .scrollbar-track-y,
+[scrollbar] .scrollbar-track-y,
+scrollbar .scrollbar-track-y {
+    top: 0;
+    right: 0;
+    width: 2px;
+    height: 100%
 }
 
-.scrollbar-track:hover {
-    opacity: 1
+[data-scrollbar] .scrollbar-thumb,
+[scrollbar] .scrollbar-thumb,
+scrollbar .scrollbar-thumb {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2px;
+    height: 2px;
+    background: #444444
+}
+
+[data-scrollbar] .overscroll-glow,
+[scrollbar] .overscroll-glow,
+scrollbar .overscroll-glow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
 }
